added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <div>
+        <h4>my first git server</h4>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis numquam saepe corrupti hic dolorum! Incidunt ipsa beatae maiores sapiente labore voluptatum quo delectus commodi, quia assumenda suscipit, amet odio veniam!
+        </p>
+
+        <h4>my 2nd git server</h4>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam minus aspernatur facilis labore a ut maxime fugiat provident tempora vel? Sunt voluptate vitae, placeat cupiditate veniam dolor est praesentium nisi.
+        </p>
+    </div>
+
 </body>
 </html>
