added the 2nd blog

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <div>
-        <h4>my first git server</h4>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis numquam saepe corrupti hic dolorum! Incidunt ipsa beatae maiores sapiente labore voluptatum quo delectus commodi, quia assumenda suscipit, amet odio veniam!
-        </p>
+    <header style="background-color: rgb(226, 160, 39);">
+        <img src="images/poster2.png" alt="company logo" width="50px" height="50px">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <button><a href="#">signup</a></button>
+        <button><a href="#">signup</a></button>
+       
 
-        <h4>my 2nd git server</h4>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam minus aspernatur facilis labore a ut maxime fugiat provident tempora vel? Sunt voluptate vitae, placeat cupiditate veniam dolor est praesentium nisi.
-        </p>
-    </div>
+
+
+    </header>
 
 </body>
 </html>
